[tool.poetry]
name = "mist"
version = "0.1.0"
description = ""
authors = ["haganelego <hagane01061998@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "1.11.0", source = "torch_cu113"}
torchvision = {version = "0.12.0", source = "torch_cu113"}
torchaudio = {version = "0.11.0", source = "torch_cu113"}
diffusers = "^0.25.0"
transformers = "4.19.2"
albumentations = "0.4.3"
imageio = "2.9.0"
pudb = "2019.2"
imageio-ffmpeg = "0.4.2"
pytorch-lightning = "1.4.2"
test-tube = ">=0.7.5"
streamlit = ">=0.73.1"
einops = "0.3.0"
torch-fidelity = "0.3.0"
torchmetrics = "0.6.0"
kornia = "0.6"
pillow = "^10.2.0"
gradio = "^4.14.0"
clip = {git = "https://github.com/openai/CLIP.git", rev = "main"}
advertorch = {git = "https://github.com/BorealisAI/advertorch.git"}
ftfy = "^6.1.3"
omegaconf = "2.1.1"
taming-transformers-rom1504 = "^0.0.6"


[[tool.poetry.source]]
name = "torch_cu113"
url = "https://download.pytorch.org/whl/cu113"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
